[CSS] #issueModal .modal {     text-align: left; }

--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ header {
     color: #b0b0b0;
 }
 
+#issueModal .modal {
+    text-align: left;
+}
+
 .modal {
     display: none;
     position: fixed;
